Se han cambiado los bordes para que no este pegado al texto

--- a/Páginas_Proporcionadas/Páginas_Proporcionadas/ejercicio_3/Ejercicio3.html
+++ b/Páginas_Proporcionadas/Páginas_Proporcionadas/ejercicio_3/Ejercicio3.html
@@ -81,7 +81,7 @@
 		<div class="articulo">
 			<h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h2>
 		
-			<img src="imagen.png" alt="Imagen genérica" />
+			<img src="imagen.png" alt="Imagen genï¿½rica" />
 			
 			<p>Nullam est lacus, suscipit ut, dapibus quis, condimentum ac, risus. Vivamus vestibulum, ipsum sollicitudin faucibus pharetra, dolor metus fringilla dui, vel aliquet pede diam tempor tortor.</p>
 			<p>Vestibulum pulvinar urna et quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vel turpis vitae dui imperdiet laoreet. Quisque eget ipsum.</p>
@@ -92,7 +92,7 @@
 		<div class="articulo">
 			<h2>Vivamus lobortis turpis ac ante fringilla faucibus</h2>
 		
-			<img src="imagen.png" alt="Imagen genérica" />
+			<img src="imagen.png" alt="Imagen genï¿½rica" />
 			
 			<p>Quisque eget ipsum. Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
 			<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam dictum hendrerit neque. Mauris id ligula non elit mattis semper. Fusce arcu ipsum, tempus eget, tincidunt at, imperdiet in, mi.</p>
